2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* glib-checks.ac: Versioned pkg-config check.

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/corba/Makefile.am
	(libguile_gnome_corba_@API_VERSION@_la_SOURCES): Version the lib
	that gets linked to.

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory. Link to the versioned lib.

2004-09-19  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (libgw_guile_gnome_corba_la_LIBADD): Not
	G_WRAP_LINK_ARGS, it's G_WRAP_LIBS.

	* gnome/corba/Makefile.am: Install headers into a versioned
	directory.

	* package.ac: Re-enable the CORBA build.

	* gnome/gw/corba-spec.scm: Move here from
	../corba/gw-corba-spec.scm.

	* gnome/corba/types.scm: Use the right g-wrapped module.

	* gnome/corba/primitives.scm: Use the right g-wrapped module.

	* gnome/corba/guile-gnome-corba.c: Include the right
	guile-gnome-gobject header.

	* gnome/corba/guile-gnome-corba-types.h: Define
	ORBIT2_INTERNAL_API when including orbit-object.h so we can get
	RootObject_duplicate/release.

	* gnome/corba/guile-gnome-corba-primitives.h: Define
	ORBIT2_INTERNAL_API when including orbit-object.h so we can get
	RootObject_duplicate/release.

	* gnome/corba/guile-gnome-corba-primitives.c: Use the right
	guile-gnome-gobject headers.
	(scm_class_slot_ref, _scm_make_class, scm_class_slot_set_x): New
	objects representing the scheme procedures of the same names.
	(DEBUG): New macro, replaces g_message. Callers updated.
	(WARN): New macro, replaces g_warning. Callers updated.
	(FOREACH_LIST): New macro, does car/cdr recursion on a list.