@@ -1,3 +1,8 @@
+2006-11-05  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/corba-spec.scm: Use (gnome gw support g-wrap), the
+	g-wrap compatibility wrapper. Use #:keywords, not :keywords.
+
 2005-03-06  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.7.99 ==
